--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-native-masked-view/masked-view": "0.2.8",
     "@react-navigation/compat": "^5.1.25",
     "@react-navigation/drawer": "6.4.1",
@@ -23,7 +26,9 @@
     "expo-asset": "~8.9.1",
     "expo-font": "~11.1.1",
     "expo-linear-gradient": "~12.1.2",
+    "expo-screen-orientation": "~5.1.1",
     "expo-splash-screen": "~0.18.2",
+    "expo-status-bar": "~1.4.4",
     "galio-framework": "^0.8.0",
     "react": "18.2.0",
     "react-native": "0.71.14",
@@ -32,13 +37,15 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "expo-status-bar": "~1.4.4"
+    "react-native-svg": "13.4.0",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.0",
     "babel-preset-expo": "^9.3.0",
     "cross-env": "^7.0.3",
-    "jest-expo": "^45.0.1",
-    "@babel/core": "^7.20.0"
+    "jest-expo": "^45.0.1"
   },
   "bugs": {
     "url": "https://github.com/creativetimofficial/material-kit-react-native/issues"
